--- a/MvcReportViewerTests/MvcReportViewerTests.csproj
+++ b/MvcReportViewerTests/MvcReportViewerTests.csproj
@@ -100,6 +100,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <EmbeddedResource Include="TestReports\TestReport.rdl" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
