Updated 4.5 project with latest changes.

--- a/MvcReportViewer_NET45/MvcReportViewer_NET45.csproj
+++ b/MvcReportViewer_NET45/MvcReportViewer_NET45.csproj
@@ -176,6 +176,7 @@
     <Compile Include="..\MvcReportViewer\UriParameters.cs">
       <Link>UriParameters.cs</Link>
     </Compile>
+    <Compile Include="StreamExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="..\MvcReportViewer\MvcReportViewer.aspx">
