--- a/MvcReportViewer_NET45/MvcReportViewer_NET45.csproj
+++ b/MvcReportViewer_NET45/MvcReportViewer_NET45.csproj
@@ -100,6 +100,9 @@
     <Compile Include="..\MvcReportViewer\ControlSettingsManager.cs">
       <Link>ControlSettingsManager.cs</Link>
     </Compile>
+    <Compile Include="..\MvcReportViewer\DefaultParameterValues.cs">
+      <Link>DefaultParameterValues.cs</Link>
+    </Compile>
     <Compile Include="..\MvcReportViewer\IgnoreCaseExtensions.cs">
       <Link>IgnoreCaseExtensions.cs</Link>
     </Compile>
@@ -157,6 +160,9 @@
     </Compile>
     <Compile Include="..\MvcReportViewer\ReportServerCredentials.cs">
       <Link>ReportServerCredentials.cs</Link>
+    </Compile>
+    <Compile Include="..\MvcReportViewer\ReportViewerEventsHandlerExtensions.cs">
+      <Link>ReportViewerEventsHandlerExtensions.cs</Link>
     </Compile>
     <Compile Include="..\MvcReportViewer\ReportViewerExtensions.cs">
       <Link>ReportViewerExtensions.cs</Link>
