--- a/MvcReportViewer_NET45/MvcReportViewer_NET45.csproj
+++ b/MvcReportViewer_NET45/MvcReportViewer_NET45.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.ReportViewer.WebForms, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libs\Microsoft.ReportViewer.WebForms.DLL</HintPath>
+      <HintPath>..\Referenced Assemblies\Microsoft.ReportViewer.WebForms.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <Private>True</Private>
